# isotope-calc-tauri

./: Cargo.toml  tauri.conf.json
capabilities/: default.json
src/: lib.rs  main.rs
